--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
  — 2.4.1
 
 script:
- — bundle install
+ — bundle exec install — jobs=3 — retry=3
  — bundle exec rake db:create
  — bundle exec rake db:migrate
  — bundle exec rspec
